syntax = "proto3";

package file;

option go_package = "./file";

message UploadFileRequest {
  string file_name = 1;
  int64 file_size = 2;
  string content_type = 3;
  int64 user_id = 4;
  bytes file_data = 5;
}

message UploadFileResponse {
  string file_id = 1;
  string file_name = 2;
  int64 file_size = 3;
  int64 expire_at = 4;
  string file_url = 5; // 新增
}

message DownloadFileRequest {
  string file_id = 1;
}

message DownloadFileResponse {
  bytes file_data = 1;
  string file_name = 2;
  int64 file_size = 3;
  string content_type = 4;
}

message DeleteFileRequest {
  string file_id = 1;
  int64 user_id = 2;
}

message DeleteFileResponse {
  bool success = 1;
}

message GetFileInfoRequest {
  string file_id = 1;
}

message GetFileInfoResponse {
  string file_id = 1;
  string file_name = 2;
  int64 file_size = 3;
  string content_type = 4;
  int64 user_id = 5;
  int64 created_at = 6;
  int64 expire_at = 7;
  bool is_expired = 8;
  string etag = 9;
  string file_type = 10;
}

message GetFileRecordReq {
  int64 user_id = 1;
}

message GetFileRecordResp {
  repeated GetFileInfoResponse file_records = 1;
}

service FileService {
  // 上传文件
  rpc UploadFile(UploadFileRequest) returns (UploadFileResponse);
  // 下载文件
  rpc DownloadFile(DownloadFileRequest) returns (DownloadFileResponse);
  // 删除文件
  rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
  // 获取文件信息
  rpc GetFileInfo(GetFileInfoRequest) returns (GetFileInfoResponse);
  // 获取用户文件记录
  rpc GetFileRecord(GetFileRecordReq) returns (GetFileRecordResp);
  // 上传头像
  rpc UploadAvatar(UploadFileRequest) returns (UploadFileResponse);
}